src/app/about/about.component.scss
.about-container {
  display: flex;

  @media (max-width: 1024px) {
    flex-direction: column;
  }
}

.about-column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 2rem;
}

.about-column.left {
  flex-basis: 30%;
}

.about-column.right {
  flex-basis: 70%;
}

.about-row {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.wrapper {
  display: inline-grid;
  width: 50%;
  @media (min-width: 640px) {
    width: 30%;
  }
  @media (min-width: 1024px) {
    width: 50%;
  }
  margin: auto;
}

.profile-pic {
  width: 100%;
  margin: 0 auto;
  border-radius: 50%;
}

.name {
  font-weight: bolder;
  font-size: x-large;
}

.sage {
  color: #749eff;
}

#typewriter {
  font-size: large;
}

